<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:padding="8dp"
                tools:context=".fragment.UploadFragment">

    <Button
        android:id="@+id/button_choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:text="@string/choose_file"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/edit_text_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/button_choose_image"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/button_choose_image"
        android:layout_marginStart="16dp"
        android:layout_toEndOf="@+id/button_choose_image"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/enter_file_name"
        android:inputType="text"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/progress_bar"
        android:layout_below="@id/edit_text_file_name"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/movemberselfie_image"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_view_show_uploads"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_toStartOf="@+id/progress_bar_text_view"
        android:progressBackgroundTint="@color/colorWhite"
        android:progressBackgroundTintMode="src_in"/>

    <TextView
        android:id="@+id/progress_bar_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/text_view_show_uploads"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/progress_bar_counter"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/button_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_toStartOf="@+id/text_view_show_uploads"
        android:background="@drawable/btn_bg"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/upload"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/text_view_show_uploads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/button_upload"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/button_upload"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/show_uploads"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"/>

</RelativeLayout>